--- a/FruitNinja/android/build.gradle
+++ b/FruitNinja/android/build.gradle
@@ -8,8 +8,8 @@ android {
             java.srcDirs = ['src']
             aidl.srcDirs = ['src']
             renderscript.srcDirs = ['src']
+            assets.srcDirs = ['assets']
             res.srcDirs = ['res']
-            assets.srcDirs = ['../assets']
             jniLibs.srcDirs = ['libs']
         }
 
