added RoboVM plugin for ios app creation. Waiting for google play console signing identity (few days) since nov 26, 2023⌛️

--- a/FruitNinja/ios/build.gradle
+++ b/FruitNinja/ios/build.gradle
@@ -17,3 +17,18 @@ robovm {
 }
 
 eclipse.project.name = appName + "-ios"
+
+
+project(":ios") {
+	apply plugin: "java"
+	apply plugin: "robovm"
+
+	dependencies {
+		implementation project(":core")
+		implementation "com.mobidevelop.robovm:robovm-rt:$roboVMVersion"
+		implementation "com.mobidevelop.robovm:robovm-cocoatouch:$roboVMVersion"
+		implementation "com.badlogicgames.gdx:gdx-backend-robovm:$gdxVersion"
+		implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
+		// ... other dependencies ...
+	}
+}
