--- a/kx-profile/package.json
+++ b/kx-profile/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "live2dmoc3": "^1.0.0",
+    "oh-my-live2d": "^0.3.0",
+    "pixi-live2d-display": "^0.4.0",
+    "pixi.js": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
