added signing identity

--- a/FruitNinja/ios/build.gradle
+++ b/FruitNinja/ios/build.gradle
@@ -13,11 +13,10 @@ launchIOSDevice.dependsOn build
 createIPA.dependsOn build
 
 robovm {
-	archs = "arm64"
 	iosSignIdentity = "Apple Development: yinghaiyu67@gmail.com (DCG5LH6V63)"
-	iosProvisioningProfile = "Yinghai Yu"
+	iosProvisioningProfile = "Katharine.mobileprovision"
 	iosSkipSigning = false
-	archs="thumbv7:arm64"
+	archs="arm64"
 }
 
 eclipse.project.name = appName + "-ios"
