--- a/fruit_ninja_flutter/.gitattributes
+++ b/fruit_ninja_flutter/.gitattributes
@@ -1,1 +1,11 @@
 *.dylib filter=lfs diff=lfs merge=lfs -text
+*.pt2 filter=lfs diff=lfs merge=lfs -text
+\# filter=lfs diff=lfs merge=lfs -text
+to filter=lfs diff=lfs merge=lfs -text
+If filter=lfs diff=lfs merge=lfs -text
+you filter=lfs diff=lfs merge=lfs -text
+want filter=lfs diff=lfs merge=lfs -text
+track filter=lfs diff=lfs merge=lfs -text
+all filter=lfs diff=lfs merge=lfs -text
+.pt2 filter=lfs diff=lfs merge=lfs -text
+files filter=lfs diff=lfs merge=lfs -text
