--- a/fog_war/pubspec.yaml
+++ b/fog_war/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/images/Terrain_16by16.png
     - assets/tiles/level_01.tmx
     - assets/tiles/Terrain_16by16.tsx
+    - assets/images/sprite-basic.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
